--- a/css/scss/_alert.scss
+++ b/css/scss/_alert.scss
@@ -25,7 +25,7 @@ $color-info-alert : lighten($color-info, 45%);
 	text-align:justify;
 	line-height: 1rem;
 	padding: 1rem;
-	margin: $margin;
+	margin: 1rem;
 
 	&.info{
 		@include colorAlert($color-info-alert);
