Add progress bar
- Progress bar + Exemple

--- a/css/scss/minstyle.io.scss
+++ b/css/scss/minstyle.io.scss
@@ -17,6 +17,7 @@ $default-border-radius: .4rem;
 @import "_heading.scss";
 @import "_form.scss";
 @import "_table.scss";
+@import "_progressbar.scss";
 @import "_utility.scss";
 
 .shadow{
