--- a/css/minstyle.io.css
+++ b/css/minstyle.io.css
@@ -769,6 +769,58 @@ tr th {
   text-align: left;
 }
 
+.progress {
+  width: 100%;
+  height: 1.2rem;
+  display: flex;
+  background-color: #f2f2f2;
+  -webkit-border-radius: 0.4rem;
+  -moz-border-radius: 0.4rem;
+  -ms-border-radius: 0.4rem;
+  -o-border-radius: 0.4rem;
+  border-radius: 0.4rem;
+  overflow: hidden;
+  text-align: center;
+  margin: 1rem;
+}
+
+.progress .progress-fill {
+  height: 1.2rem;
+  background-color: #a6a6a6;
+  white-space: nowrap;
+  font-size: .75rem;
+  text-align: center;
+  line-height: 1.2rem;
+  color: #fff;
+  text-align: center;
+  font-weight: bold;
+}
+
+.progress .progress-fill.info {
+  background-color: #3c8ec3;
+}
+
+.progress .progress-fill.success {
+  background-color: #53a03c;
+}
+
+.progress .progress-fill.error {
+  background-color: #d53434;
+}
+
+.progress .progress-fill.striped {
+  background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
+  background-size: 1rem 1rem;
+}
+
+.progress .progress-fill.rounded {
+  -webkit-border-radius: 0.4rem;
+  -moz-border-radius: 0.4rem;
+  -ms-border-radius: 0.4rem;
+  -o-border-radius: 0.4rem;
+  border-radius: 0.4rem;
+}
+
 .float-left {
   float: left;
 }
