--- a/css/scss/_list.scss
+++ b/css/scss/_list.scss
@@ -30,13 +30,13 @@ ul,ol,dl{
 
     &.boxed{
     	list-style: none;
-		border: 0.1rem solid $color-gray;
+		border: 0.1rem solid $color-gray-dark;
 		@include border-radius;
 
 		& li, dt, dd{
 			padding: 0.7rem;
 			margin: 0;
-			border-bottom: 0.1rem solid $color-gray;
+			border-bottom: 0.1rem solid $color-gray-dark;
 		}
 
 		li:last-of-type {
