Change main color
Change main color

--- a/css/scss/minstyle.io.scss
+++ b/css/scss/minstyle.io.scss
@@ -1,6 +1,6 @@
-$color-info: #3c8ec3;
-$color_error: #d53434;
-$color_success: #53a03c;
+$color-info: #4593b3;
+$color_error: #d23f51;
+$color_success: #5ca745;
 $color-gray: #f2f2f2;
 $color-gray-dark: darken(#f2f2f2, 30%);
 $default-border-radius: .4rem;
