--- a/css/minstyle.io.css
+++ b/css/minstyle.io.css
@@ -140,12 +140,12 @@ button,
 input[type='button'],
 input[type='submit'] {
   display: inline-block;
-  background-color: #3c8ec3;
+  background-color: #4593b3;
   text-decoration: none;
   text-align: center;
   font-size: .9rem;
   color: #fff;
-  border: 0.1rem solid #3c8ec3;
+  border: 0.1rem solid #4593b3;
   -webkit-border-radius: 0.4rem;
   -moz-border-radius: 0.4rem;
   -ms-border-radius: 0.4rem;
@@ -169,16 +169,16 @@ button.error,
 .btn.error,
 input[type='button'].error,
 input[type='submit'].error {
-  background-color: #d53434;
-  border-color: #d53434;
+  background-color: #d23f51;
+  border-color: #d23f51;
 }
 
 button.success,
 .btn.success,
 input[type='button'].success,
 input[type='submit'].success {
-  background-color: #53a03c;
-  border-color: #53a03c;
+  background-color: #5ca745;
+  border-color: #5ca745;
 }
 
 button.border,
@@ -186,24 +186,24 @@ button.border,
 input[type='button'].border,
 input[type='submit'].border {
   background-color: transparent;
-  border: 0.1rem solid #3c8ec3;
-  color: #3c8ec3;
+  border: 0.1rem solid #4593b3;
+  color: #4593b3;
 }
 
 button.border.error,
 .btn.border.error,
 input[type='button'].border.error,
 input[type='submit'].border.error {
-  border-color: #d53434;
-  color: #d53434;
+  border-color: #d23f51;
+  color: #d23f51;
 }
 
 button.border.success,
 .btn.border.success,
 input[type='button'].border.success,
 input[type='submit'].border.success {
-  border-color: #53a03c;
-  color: #53a03c;
+  border-color: #5ca745;
+  color: #5ca745;
 }
 
 button.border-bottom,
@@ -213,24 +213,24 @@ input[type='submit'].border-bottom {
   background-color: transparent;
   border: 0;
   border-radius: 0;
-  border-bottom: 0.1rem solid #3c8ec3;
-  color: #3c8ec3;
+  border-bottom: 0.1rem solid #4593b3;
+  color: #4593b3;
 }
 
 button.border-bottom.error,
 .btn.border-bottom.error,
 input[type='button'].border-bottom.error,
 input[type='submit'].border-bottom.error {
-  border-color: #d53434;
-  color: #d53434;
+  border-color: #d23f51;
+  color: #d23f51;
 }
 
 button.border-bottom.success,
 .btn.border-bottom.success,
 input[type='button'].border-bottom.success,
 input[type='submit'].border-bottom.success {
-  border-color: #53a03c;
-  color: #53a03c;
+  border-color: #5ca745;
+  color: #5ca745;
 }
 
 button.clear,
@@ -239,21 +239,21 @@ input[type='button'].clear,
 input[type='submit'].clear {
   background-color: transparent;
   border-color: transparent;
-  color: #3c8ec3;
+  color: #4593b3;
 }
 
 button.clear.error,
 .btn.clear.error,
 input[type='button'].clear.error,
 input[type='submit'].clear.error {
-  color: #d53434;
+  color: #d23f51;
 }
 
 button.clear.success,
 .btn.clear.success,
 input[type='button'].clear.success,
 input[type='submit'].clear.success {
-  color: #53a03c;
+  color: #5ca745;
 }
 
 button.rounded,
@@ -267,14 +267,14 @@ button.rounded.error,
 .btn.rounded.error,
 input[type='button'].rounded.error,
 input[type='submit'].rounded.error {
-  border-color: #d53434;
+  border-color: #d23f51;
 }
 
 button.rounded.success,
 .btn.rounded.success,
 input[type='button'].rounded.success,
 input[type='submit'].rounded.success {
-  border-color: #53a03c;
+  border-color: #5ca745;
 }
 
 button.border-rounded,
@@ -287,23 +287,23 @@ input[type='submit'].border-rounded {
   -o-border-radius: 10em;
   border-radius: 10em;
   background-color: transparent;
-  color: #3c8ec3;
+  color: #4593b3;
 }
 
 button.border-rounded.error,
 .btn.border-rounded.error,
 input[type='button'].border-rounded.error,
 input[type='submit'].border-rounded.error {
-  border-color: #d53434;
-  color: #d53434;
+  border-color: #d23f51;
+  color: #d23f51;
 }
 
 button.border-rounded.success,
 .btn.border-rounded.success,
 input[type='button'].border-rounded.success,
 input[type='submit'].border-rounded.success {
-  border-color: #53a03c;
-  color: #53a03c;
+  border-color: #5ca745;
+  color: #5ca745;
 }
 
 button:hover,
@@ -356,15 +356,15 @@ input[type='submit'].large {
 }
 
 .badge.info {
-  background-color: #3c8ec3;
+  background-color: #4593b3;
 }
 
 .badge.success {
-  background-color: #53a03c;
+  background-color: #5ca745;
 }
 
 .badge.error {
-  background-color: #d53434;
+  background-color: #d23f51;
 }
 
 .badge.white {
@@ -401,17 +401,17 @@ blockquote.border-white,
 
 blockquote.border-white.info,
 .blockquote.border-white.info {
-  border-left: 0.2rem solid #3c8ec3;
+  border-left: 0.2rem solid #4593b3;
 }
 
 blockquote.border-white.success,
 .blockquote.border-white.success {
-  border-left: 0.2rem solid #53a03c;
+  border-left: 0.2rem solid #5ca745;
 }
 
 blockquote.border-white.error,
 .blockquote.border-white.error {
-  border-left: 0.2rem solid #d53434;
+  border-left: 0.2rem solid #d23f51;
 }
 
 blockquote.border,
@@ -427,17 +427,17 @@ blockquote.border,
 
 blockquote.border.info,
 .blockquote.border.info {
-  border-left: 0.2rem solid #3c8ec3;
+  border-left: 0.2rem solid #4593b3;
 }
 
 blockquote.border.success,
 .blockquote.border.success {
-  border-left: 0.2rem solid #53a03c;
+  border-left: 0.2rem solid #5ca745;
 }
 
 blockquote.border.error,
 .blockquote.border.error {
-  border-left: 0.2rem solid #d53434;
+  border-left: 0.2rem solid #d23f51;
 }
 
 blockquote.boxed,
@@ -454,20 +454,20 @@ blockquote.boxed,
 
 blockquote.boxed.info,
 .blockquote.boxed.info {
-  border: 0.1rem solid #d8e8f3;
-  border-left: 0.2rem solid #3c8ec3;
+  border: 0.1rem solid #d5e7ef;
+  border-left: 0.2rem solid #4593b3;
 }
 
 blockquote.boxed.success,
 .blockquote.boxed.success {
-  border: 0.1rem solid #c9e8c0;
-  border-left: 0.2rem solid #53a03c;
+  border: 0.1rem solid #d4ebcd;
+  border-left: 0.2rem solid #5ca745;
 }
 
 blockquote.boxed.error,
 .blockquote.boxed.error {
-  border: 0.1rem solid #f8dddd;
-  border-left: 0.2rem solid #d53434;
+  border: 0.1rem solid #f9e4e7;
+  border-left: 0.2rem solid #d23f51;
 }
 
 .alert {
@@ -486,21 +486,21 @@ blockquote.boxed.error,
 }
 
 .alert.info {
-  background-color: #ecf4f9;
-  border: 0.1rem solid #aac4d4;
-  color: #446d88;
+  background-color: #e8f2f6;
+  border: 0.1rem solid #abc3cc;
+  color: #4b6d7a;
 }
 
 .alert.error {
-  background-color: #fcf2f2;
-  border: 0.1rem solid #dfa9a9;
-  color: #9c3a3a;
+  background-color: #fef9f9;
+  border: 0.1rem solid #dfb1b7;
+  color: #9e404c;
 }
 
 .alert.success {
-  background-color: #d9efd3;
-  border: 0.1rem solid #a3c299;
-  color: #496a3f;
+  background-color: #e4f2e0;
+  border: 0.1rem solid #adc6a6;
+  color: #527049;
 }
 
 .alert.white {
@@ -532,15 +532,15 @@ ul.border, ol.border, dl.border {
 }
 
 ul.border.error, ol.border.error, dl.border.error {
-  border-left: 0.2rem solid #d53434;
+  border-left: 0.2rem solid #d23f51;
 }
 
 ul.border.success, ol.border.success, dl.border.success {
-  border-left: 0.2rem solid #53a03c;
+  border-left: 0.2rem solid #5ca745;
 }
 
 ul.border.info, ol.border.info, dl.border.info {
-  border-left: 0.2rem solid #3c8ec3;
+  border-left: 0.2rem solid #4593b3;
 }
 
 ul.boxed, ol.boxed, dl.boxed {
@@ -568,7 +568,7 @@ ul li, ul dt, ul dd, ol li, ol dt, ol dd, dl li, dl dt, dl dd {
 }
 
 ul li.active, ul dt.active, ul dd.active, ol li.active, ol dt.active, ol dd.active, dl li.active, dl dt.active, dl dd.active {
-  background-color: #3c8ec3;
+  background-color: #4593b3;
   color: white;
   -webkit-border-radius: 0.4rem;
   -moz-border-radius: 0.4rem;
@@ -588,15 +588,15 @@ h1.highlighted, h2.highlighted, h3.highlighted, h4.highlighted, h5.highlighted, 
 }
 
 h1.highlighted.error, h2.highlighted.error, h3.highlighted.error, h4.highlighted.error, h5.highlighted.error, h6.highlighted.error {
-  border-bottom: 0.2rem solid #d53434;
+  border-bottom: 0.2rem solid #d23f51;
 }
 
 h1.highlighted.success, h2.highlighted.success, h3.highlighted.success, h4.highlighted.success, h5.highlighted.success, h6.highlighted.success {
-  border-bottom: 0.2rem solid #53a03c;
+  border-bottom: 0.2rem solid #5ca745;
 }
 
 h1.highlighted.info, h2.highlighted.info, h3.highlighted.info, h4.highlighted.info, h5.highlighted.info, h6.highlighted.info {
-  border-bottom: 0.2rem solid #3c8ec3;
+  border-bottom: 0.2rem solid #4593b3;
 }
 
 h1 {
@@ -797,15 +797,15 @@ tr th {
 }
 
 .progress .progress-fill.info {
-  background-color: #3c8ec3;
+  background-color: #4593b3;
 }
 
 .progress .progress-fill.success {
-  background-color: #53a03c;
+  background-color: #5ca745;
 }
 
 .progress .progress-fill.error {
-  background-color: #d53434;
+  background-color: #d23f51;
 }
 
 .progress .progress-fill.striped {
@@ -848,5 +848,5 @@ tr th {
 }
 
 a {
-  color: #3c8ec3;
+  color: #4593b3;
 }
