--- a/css/minstyle.io.css
+++ b/css/minstyle.io.css
@@ -926,6 +926,14 @@ tr th {
   background-color: #d23f51;
 }
 
+.progress .progress-fill.gradient {
+  background-image: -owg-linear-gradient(to left top, #fd8157, #eb5a82);
+  background-image: -webkit-linear-gradient(to left top, #fd8157, #eb5a82);
+  background-image: -moz-linear-gradient(to left top, #fd8157, #eb5a82);
+  background-image: -o-linear-gradient(to left top, #fd8157, #eb5a82);
+  background-image: linear-gradient(to left top, #fd8157, #eb5a82);
+}
+
 .progress .progress-fill.striped {
   background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
   background-size: 1rem 1rem;
