--- a/css/scss/_progressbar.scss
+++ b/css/scss/_progressbar.scss
@@ -31,6 +31,10 @@
 			background-color: $color-error;
 		}
 
+		&.gradient{
+			@include background-image(linear-gradient(to left top, #fd8157, #eb5a82));
+		}
+
 		&.striped{
 			background-image: linear-gradient(45deg,rgba(255,255,255,.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,.15) 50%,rgba(255,255,255,.15) 75%,transparent 75%,transparent);
 			background-size: 1rem 1rem;
