--- a/css/scss/_grid.scss
+++ b/css/scss/_grid.scss
@@ -21,6 +21,7 @@ $width-grid: 100%;
 		.col-#{$grid-letter}-#{$i}{
 			float:left;
 			width: $i * $width-grid/ $columns-grid;
+			min-height: 1px;
 		}
 	}
 
