--- a/css/scss/_card.scss
+++ b/css/scss/_card.scss
@@ -1,4 +1,34 @@
+@mixin cardElementPosition(){
+	&.center{
+		text-align: center;
+	}
+
+	&.right{
+		float: right;
+	}
+
+	&.left{
+		float: left;
+	}
+}
+
+@mixin cardTextPosition(){
+	&.center{
+		text-align: center;
+	}
+
+	&.right{
+		text-align: right;
+	}
+
+	&.left{
+		text-align: left;
+	}
+}
+
 .card{
+
+	margin-bottom: 1rem;
 
 	.pic{
 		img{
@@ -15,33 +45,24 @@
 
 	.title{
 		margin: 1rem 0 0 0;
-
-		&.center{
-			text-align: center;
-		}
+		@include cardTextPosition();
 	}
 
 	.text{
 		margin: 1rem 0 0 0;
 		text-align: justify;
 		line-height: 1.2em;
+		@include cardTextPosition();
 	}
 
 	.action{
 		margin: 1rem 0 0 0;
-
-		&.center{
-			text-align: center;
-		}
-
-		&.right{
-			float: right;
-		}
+		@include cardElementPosition();
 	}
 
 	&.boxed{
 		@include border-radius;
-		border: 0.1rem solid lighten($color-gray-dark, 20%);
+		border: 1px solid lighten($color-gray-dark, 20%);
 		padding: 0.7rem;
 	}
 }
