--- a/css/scss/_grid.scss
+++ b/css/scss/_grid.scss
@@ -4,7 +4,7 @@
 */
 
 $columns: 12!default;
-$gutter: 20px!default;
+$gutter: 2%!default;
 $medium: 640px!default;
 $large: 1024px!default;
 $large-width-grid: 1140px!default;
@@ -12,15 +12,15 @@ $large-width-grid: 1140px!default;
 .container{
 	max-width: $large-width-grid;
 	margin: 0 auto;
-
 }
 
 @mixin responsive-columns($suffix: ''){
     @for $i from 0 through $columns{
         @if $i != 0 {
-            .col#{$suffix}-#{$i}{ width:$i / $columns * 100%; display: flex;}
+            .col#{$suffix}-#{$i}{ width:$i / $columns * 100% - $gutter;}
 
         }
+
         .col#{$suffix}-center{ margin: 0 auto; float: none; }
         .col#{$suffix}-push-#{$i}{ left:$i / $columns * 100%; }
         .col#{$suffix}-offset-#{$i}{ margin-left:$i / $columns * 100%; }
@@ -33,6 +33,7 @@ $large-width-grid: 1140px!default;
     position: relative;
     min-height: 1px;
     padding:0 $gutter * 0.5;
+    display: flex;
 
     &.no-padding{
 		padding: 0;
