--- a/css/scss/_list.scss
+++ b/css/scss/_list.scss
@@ -1,5 +1,5 @@
 @mixin borderColorList($pBorderColorList){
-	border-left: 0.2rem solid $pBorderColorList;
+	border-left: 2px solid $pBorderColorList;
 }
 
 ul,ol,dl{
@@ -12,7 +12,7 @@ ul,ol,dl{
 
     &.border{
     	list-style: none;
-		border-left: 0.2rem solid $color-gray;
+		border-left: 2px solid $color-gray;
 		padding-left: 0.5rem;
 
 		&.error{
@@ -30,13 +30,13 @@ ul,ol,dl{
 
     &.boxed{
     	list-style: none;
-		border: 0.1rem solid lighten($color-gray-dark, 20%);
+		border: 1px solid lighten($color-gray-dark, 20%);
 		@include border-radius;
 
 		& li, dt, dd{
 			padding: 0.7rem;
 			margin: 0;
-			border-bottom: 0.1rem solid lighten($color-gray-dark, 20%);
+			border-bottom: 1px solid lighten($color-gray-dark, 20%);
 		}
 
 		li:last-of-type {
